# d2modgen

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: CascLib.cmake  StormLib.cmake  qt_helpers.cmake  targets.cmake  translationsRelease.cmake
modules/: challenge.json  character.json  dropFiltering.json  gambling.json  horadricCube.json  itemDrops.json  itemRandomizer.json  mergePostgen.json  mergePregen.json  monsterDensity.json  monsterRandomizer.json  monsterStats.json  perfectRolls.json  qualityOfLife.json  requirements.json  runeDrops.json  skillRandomizer.json  testConfig.json
presets/: basic.json  friendly_chaos.json  magic_rando.json  oh_no.json  readme.txt
src/: AttributeHelper.cpp  AttributeHelper.hpp  CascWrapper.cpp  CascWrapper.hpp  CheckboxWidget.cpp  CheckboxWidget.hpp  CommonTypes.hpp  ConfigPageAbstract.cpp  ConfigPageAbstract.hpp  ConfigPageChallenge.cpp  ConfigPageChallenge.hpp  ConfigPageCharacter.cpp  ConfigPageCharacter.hpp  ConfigPageCube.cpp  ConfigPageCube.hpp  ConfigPageDifficulty.cpp  ConfigPageDifficulty.hpp  ConfigPageDropFiltering.cpp  ConfigPageDropFiltering.hpp  ConfigPageDrops.cpp  ConfigPageDrops.hpp  ConfigPageGambling.cpp  ConfigPageGambling.hpp  ConfigPageMergeMods.cpp  ConfigPageMonRandomizer.cpp  ConfigPageMonRandomizer.hpp  ConfigPageQol.cpp  ConfigPageQol.hpp  ConfigPageRandomizer.cpp  ConfigPageRandomizer.hpp  ConfigPages.cpp  DataContext.cpp  DataContext.hpp  FileIOUtils.cpp  FileIOUtils.hpp  HelpToolButton.hpp  MainConfigPage.cpp  MainConfigPage.hpp  MainWindow.cpp  MainWindow.hpp  (+14 more)
src/ConfigPages/: ConfigPageAbstract.cpp  ConfigPageAbstract.hpp  ConfigPageChallenge.cpp  ConfigPageChallenge.hpp  ConfigPageCharacter.cpp  ConfigPageCharacter.hpp  ConfigPageCube.cpp  ConfigPageCube.hpp  ConfigPageDifficulty.cpp  ConfigPageDifficulty.hpp  ConfigPageDropFiltering.cpp  ConfigPageDropFiltering.hpp  ConfigPageDrops.cpp  ConfigPageDrops.hpp  ConfigPageGambling.cpp  ConfigPageGambling.hpp  ConfigPageItemDrops.cpp  ConfigPageItemDrops.hpp  ConfigPageItemRandomizer.cpp  ConfigPageItemRandomizer.hpp  ConfigPageMergeMods.cpp  ConfigPageMergeMods.hpp  ConfigPageMonDensity.cpp  ConfigPageMonDensity.hpp  ConfigPageMonRandomizer.cpp  ConfigPageMonRandomizer.hpp  ConfigPageMonStats.cpp  ConfigPageMonStats.hpp  ConfigPagePerfectRoll.cpp  ConfigPagePerfectRoll.hpp  ConfigPageQol.cpp  ConfigPageQol.hpp  ConfigPageRandomizer.cpp  ConfigPageRandomizer.hpp  ConfigPageRuneDrops.cpp  ConfigPageRuneDrops.hpp  ConfigPageSkillRandomizer.cpp  ConfigPageSkillRandomizer.hpp  ConfigPages.cpp  ConfigPages.hpp  (+3 more)
src/ConsoleApp/: main.cpp
src/CoreLib/: AttributeHelper.cpp  AttributeHelper.hpp  CApi.cpp  CApi.h  CApiCppWrapper.hpp  ChronoPoint.cpp  ChronoPoint.hpp  Colors.cpp  Colors.hpp  CommonTypes.hpp  ConfigHandler.cpp  ConfigHandler.hpp  DataContext.cpp  DataContext.hpp  DyLib.cpp  DyLib.hpp  FileIOUtils.cpp  FileIOUtils.hpp  IModule.hpp  Logger.cpp  Logger.hpp  Logger_details.hpp  ModuleFactory.cpp  ModuleFactory.hpp  PlatformPathUtils.cpp  PlatformPathUtils.hpp  PluginModule.cpp  PluginModule.hpp  PropertyTree.cpp  PropertyTree.hpp  RAIIUtils.hpp  RandoUtils.cpp  RandoUtils.hpp  TableBase.cpp  TableBase.hpp  TableId.cpp  TableId.hpp  TableUtils.cpp  TableUtils.hpp
src/CoreLib/Formats/: FileFormatCSV.cpp  FileFormatCSV.hpp  FileFormatJson.cpp  FileFormatJson.hpp
src/CoreLib/Modules/: ModuleAbstract.hpp  ModuleChallenge.cpp  ModuleChallenge.hpp  ModuleCharacter.cpp  ModuleCharacter.hpp  ModuleCube.cpp  ModuleCube.hpp  ModuleDropFiltering.cpp  ModuleDropFiltering.hpp  ModuleGambling.cpp  ModuleGambling.hpp  ModuleItemDrops.cpp  ModuleItemDrops.hpp  ModuleItemRandomizer.cpp  ModuleItemRandomizer.hpp  ModuleMergeMods.cpp  ModuleMergeMods.hpp  ModuleMonDensity.cpp  ModuleMonDensity.hpp  ModuleMonRandomizer.cpp  ModuleMonRandomizer.hpp  ModuleMonStats.cpp  ModuleMonStats.hpp  ModulePerfectRoll.cpp  ModulePerfectRoll.hpp  ModuleQol.cpp  ModuleQol.hpp  ModuleRequirements.cpp  ModuleRequirements.hpp  ModuleRuneDrops.cpp  ModuleRuneDrops.hpp  ModuleSkillRandomizer.cpp  ModuleSkillRandomizer.hpp  ModuleTestConfig.cpp  ModuleTestConfig.hpp
src/CoreLib/Storage/: CascStorage.cpp  CascStorage.hpp  FolderStorage.cpp  FolderStorage.hpp  IStorage.hpp  StorageCache.cpp  StorageCache.hpp  StorageConstants.hpp  StormStorage.cpp  StormStorage.hpp
src/Plugins/TestPlugin/: plugin.cpp
src/QtApp/: CommonTypes.hpp  ConfigPageFactory.cpp  ConfigPageFactory.hpp  DataContext.cpp  FileIOUtils.hpp  HelpToolButton.hpp  MainWindow.cpp  MainWindow.hpp  PropertyTree.cpp  TableUtils.cpp  WinSpecific.cpp  WinSpecific.hpp  main.cpp
src/QtApp/ConfigPages/: ConfigPageAbstract.cpp  ConfigPageAbstract.hpp  ConfigPageChallenge.cpp  ConfigPageChallenge.hpp  ConfigPageCharacter.cpp  ConfigPageCharacter.hpp  ConfigPageCube.cpp  ConfigPageCube.hpp  ConfigPageDropFiltering.cpp  ConfigPageDropFiltering.hpp  ConfigPageGambling.cpp  ConfigPageGambling.hpp  ConfigPageItemDrops.cpp  ConfigPageItemDrops.hpp  ConfigPageItemRandomizer.cpp  ConfigPageItemRandomizer.hpp  ConfigPageMergeMods.cpp  ConfigPageMergeMods.hpp  ConfigPageMonDensity.cpp  ConfigPageMonDensity.hpp  ConfigPageMonRandomizer.cpp  ConfigPageMonRandomizer.hpp  ConfigPageMonStats.cpp  ConfigPageMonStats.hpp  ConfigPagePerfectRoll.cpp  ConfigPagePerfectRoll.hpp  ConfigPageQol.cpp  ConfigPageQol.hpp  ConfigPageRuneDrops.cpp  ConfigPageRuneDrops.hpp  ConfigPageSkillRandomizer.cpp  ConfigPageSkillRandomizer.hpp  IConfigPage.hpp  MainConfigPage.cpp  (+3 more)
src/Storage/: CascStorage.cpp  CascStorage.hpp  FolderStorage.cpp  FolderStorage.hpp  IStorage.hpp  StorageCache.cpp  StorageCache.hpp  StorageConstants.hpp  StormStorage.cpp  StormStorage.hpp
src/ValueEditors/: CheckboxWidget.cpp  CheckboxWidget.hpp  IValueWidget.hpp  LineWidget.cpp  LineWidget.hpp  SliderWidget.cpp  SliderWidget.hpp
theme/: breeze.qrc  dark.conf  light.conf
theme/dark/: stylesheet.qss
theme/light/: stylesheet.qss
translations/: modgen_en_US.ts  modgen_ko_KR.ts  modgen_ru_RU.ts
(+14 files in other folders)
